--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,5 @@
-- Add missing sounds.
-- Cap backward travel.
+- Add missing sounds:
+ - Collect glue, extra balls, gravity
+ - Glue to bat
+ - Lose a ball
 - Better timing.
